# unusual-whales

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  unusual-whales-design.md
config/: config.yaml
docs/superpowers/plans/: 2026-03-12-phase1a-mvp.md
docs/superpowers/specs/: 2026-03-12-uw-flow-scanner-phased-design.md
tests/: conftest.py  test_config.py  test_db.py  test_discord.py  test_health.py  test_main.py  test_poller.py  test_schemas.py  test_scorer.py
uw_flow_scanner/: main.py
uw_flow_scanner/alerting/: discord.py
uw_flow_scanner/core/: config.py  db.py  schemas.py
uw_flow_scanner/health/: server.py
uw_flow_scanner/ingestion/: poller.py
uw_flow_scanner/scoring/: prompts.py  scorer.py
