[project]
name = "uw-flow-scanner"
version = "0.1.0"
description = "Near-real-time options flow scanner using Unusual Whales API"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "anthropic>=0.52",
    "duckdb>=1.2",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "pandas-market-calendars>=4.4",
    "structlog>=24.4",
    "pyyaml>=6.0",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.8",
]

[project.scripts]
uw-scanner = "uw_flow_scanner.main:cli"

[tool.setuptools.packages.find]
include = ["uw_flow_scanner*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
